--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,13 +11,9 @@
       <%= funnyText %>
   
   <% } else { %>
-    Register:
-    <br>
     <%- include('include/registerForm') %>
-    <br>
-    Login:
-    <br>
     <%- include('include/loginForm') %>
   <% } %>
+  <script src="js/loginRegister.js"></script>
 </body>
 </html>
