--- a/views/include/registerForm.ejs
+++ b/views/include/registerForm.ejs
@@ -1,7 +1,11 @@
 <link rel="stylesheet" href="css/register.css">
 
-<form action="/register" method="post" id="registerForm">
-  <input type="text" name="username" id="username">
-  <input type="password" name="password" id="password">
-  <input type="submit" value="Submit">
-</form>
+<div id="registerForm">
+  Register:
+  <form action="/register" method="post">
+    <input type="text" name="username" id="username">
+    <input type="password" name="password" id="password">
+    <input type="submit" value="Submit">
+    <button type="button" onclick="toggleForms()">Back to Login</button>
+  </form>
+</div>
