--- a/views/include/loginForm.ejs
+++ b/views/include/loginForm.ejs
@@ -2,7 +2,7 @@
 
 <div id="loginForm">
   Login:
-  <form action="/login" method="post" id="loginForm">
+  <form action="/login" method="post">
     <input type="text" name="username" id="username">
     <input type="password" name="password" id="password">
     <input type="submit" value="Submit">
