--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div class="grid-container">
-    <div class="item1">Header</div>
+    <div class="search">
+      <%- include('include/searchForm') %>
+    </div>
     <div class="item2">Menu</div>
     <div class="form">
         <% if(isLoggedIn){ %>
