--- a/views/forbidden.ejs
+++ b/views/forbidden.ejs
@@ -8,5 +8,8 @@
 <body>
   <%= text %>
   <%= username %>
+  <form action="/logout" method="post">
+    <input type="submit" value="Logout">
+  </form>
 </body>
 </html>
